OAKHILL/src/objects/MN_Related_List__c.object
<CustomObject>
    <fields>
        <fullName>Custom_Directive_Name__c</fullName>
        <label>Custom Directive Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DisplayName__c</fullName>
        <label>DisplayName</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FieldSetName__c</fullName>
        <label>FieldSetName</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ObjectName__c</fullName>
        <label>ObjectName</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RecordType__c</fullName>
        <label>Record Types To Be Included</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Types_To_Be_Excluded__c</fullName>
        <label>Record Types To Be Excluded</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Types_To_Be_Included__c</fullName>
        <label>Record Types To Be Included</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rollup_API_Name__c</fullName>
        <label>Rollup API Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SearchResultsCSV__c</fullName>
        <label>SearchResultsCSV</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>MN Related List</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Order__c</columns>
        <columns>DisplayName__c</columns>
        <columns>ObjectName__c</columns>
        <columns>NAME</columns>
        <columns>FieldSetName__c</columns>
        <columns>RecordType__c</columns>
        <columns>Record_Types_To_Be_Excluded__c</columns>
        <columns>Rollup_API_Name__c</columns>
        <columns>SearchResultsCSV__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>MN Related List Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MN Related Lists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>